优化、支持canal集群

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-canal.host=192.168.148.102
-canal.port=11111
+# canal\u670D\u52A1\u5668\u5730\u5740\u9017\u53F7\u5206\u9694
+canal.cluster=192.168.148.102:11111
 canal.username=
 canal.password=
 canal.destination=example
