--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ canal.password=
 canal.destination=example
 canal.test-idle-time=5000
 
-logging.level.com.cpiwx.dataasyncspringbootstarter=debug
+logging.level.com.cpiwx.canalstarter=debug
